force-app/main/default/objects/Organization_Job_Code__c/Organization_Job_Code__c.object-meta.xml
<CustomObject>
    <label>Job Categories</label>
    <nameField>
        <displayFormat>Jct-{00000}</displayFormat>
        <label>Job Category Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>