force-app/main/default/objects/Organization_Job_Code__c/fields/Job_Category_Group__c.field-meta.xml
<CustomField>
    <fullName>Job_Category_Group__c</fullName>
    <formula>Job_Code_Mapping__r.Job_Category_Group__c</formula>
    <label>Job Category</label>
    <type>Text</type>
</CustomField>