force-app/main/default/objects/Organization_Job_Code__c/fields/Job_Code_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Job_Code_Mapping__c</fullName>
    <label>Job Category</label>
    <referenceTo>Organization_Job_Code_Mapping__c</referenceTo>
    <relationshipLabel>Job Categories</relationshipLabel>
    <relationshipName>Organization_Job_Codes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>