force-app/main/default/objects/Organization_Job_Code__c/fields/Job_Code_Titles__c.field-meta.xml
<CustomField>
    <fullName>Job_Code_Titles__c</fullName>
    <formula>Job_Code_Mapping__r.Job_Code__c  + &apos; - &apos; + Job_Code_Mapping__r.Job_Title__c</formula>
    <label>Job Code &amp; Titles</label>
    <type>Text</type>
</CustomField>