force-app/main/default/objects/Organization_Job_Code__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Job Categories</relationshipLabel>
    <relationshipName>Job_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>