force-app/main/default/objects/Organization_Job_Code__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <formula>Job_Code_Mapping__r.Sub_Category__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Category</label>
    <type>Text</type>
</CustomField>