force-app/main/default/objects/Organization_Job_Code__c/fields/Sub_Group__c.field-meta.xml
<CustomField>
    <fullName>Sub_Group__c</fullName>
    <formula>Job_Code_Mapping__r.Sub_Group__c</formula>
    <label>Job Sub Category</label>
    <type>Text</type>
</CustomField>