force-app/main/default/objects/Organization_Job_Code__c/validationRules/Organization_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Organization_is_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL( Organization__c )</errorConditionFormula>
    <errorDisplayField>Organization__c</errorDisplayField>
    <errorMessage>Organization is Mandatory</errorMessage>
</ValidationRule>